# 213d

./: .gitignore  BacksubMAC.spec  FastCVApp.py  LICENSE  README.md  example_backgroundsubtraction.py  example_haarcascade.py  importFCVA.py  import_test.py  main.py  main_decorator_multiP_testing.py  main_file_read.py  main_file_readAFTERrun.py  pyproject.toml
FastCVApp/: FCVAutils.py  FastCVApp.py
FastCVApp/examples/: PyInstallerHooks.py  WINMediapipeExample.spec  WIN_HaarCascade.spec  WIN_MediapipeExample.spec  example_backgroundsubtraction.py  example_haarcascade.py  example_identityfunc.py  example_mediapipe.py  example_sepiafilter.py
FastCVApp/logviewer/: logs.txt  matplot_timeline.py
examples/: Backsub.spec  BacksubMACold.spec  CannyEdge.spec  HaarCascade.spec  MediapipeExample.spec  Readme.txt  SepiaFilter.spec  example_backgroundsubtraction.py  example_cannyedge.py  example_haarcascade.py  example_mediapipe.py  example_sepiafilter.py
fcvadocs/docs/: about.md
models/: models.py
test/: TEST_kivy_from_subprocess2.py  TEST_kivy_from_subprocess3.py  TEST_mediapipe_kivy_trio_multiprocessing.py  TEST_mediapipe_no_kivy_multiprocessing.py  TIMING NOTES Jun 4 23.txt  background subtraction.py  camera.py  decorator_test.py  decoratortesting.py  dill_pickling_check.py  functesting.py  main_file_read.py  mediapipe_nomulti_kivy.py  mediapipe_original_reference.py  mediapipe_reference2.py  minimal_abstraction.py.py  multiprocesstest.py  planning out subprocess strategy.graphml  sharedmemwritespeedtest.py  speedtest.py  test while True block and with holistic block.py  timelineSOLO.py
test/2023 Jun 21 testing texture onupdate/: filechooserexampleApp.py
test/2023 Jun 30 vlc integration lol/: vlckivy.py
test/abstractwidget/: Abstractingwidget.kv  abstractingwidget.py
(+11 files in other folders)
