[tool.poetry]
name = "fastcvapp"
version = "0.1.0"
description = "Create a computer vision app FAST! Multiprocessing made easy, right out of the box."
authors = ["ShootingStarDragon"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.12"
Kivy = "^2.1.0"
opencv-python = "^4.6.0.66"
numpy = "^1.23.4"
mediapipe-silicon = "^0.9.1"

[tool.poetry.group.dev.dependencies]
pydantic = "^1.10.2"
dill = "^0.3.6"
trio = "^0.22.0"
black = "^22.10.0"
PySnooper = "^1.1.1"
pyinstaller = "^5.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
